tests/core/error/triples-2.rq
# Use unknown property
SELECT ?u { ?u nrl:asdfqwertyuiop 42 }
